--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <!-- header-->
-    <header class="header">
+    <header class="header container">
         <div class="navbar">
             <a href="/index.html" class="logo"></a>
             <img src="./img/logo.svg" alt="logo">
@@ -67,6 +67,161 @@
         </div>
     </header>
     <!--header-0-->
+    <div class="page-content container">
+        <!-- Обявления БЛОК -->
+        <main class="main">
+            <h2 class="paget-title">Рекомендации для вас</h2>
+            <!-- КАРТЫ ТОВАРОВ -->
+            <div class="cards">
+                <!-- CARD- 1 -->
+                <div class="card">
+                    <a href="#" class="card-image">
+                        <img src="img/card-image.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <h3 class="card-title">Электросамокат</h3>
+                        <button class="like">
+                            <img src="img/like.svg" alt="like">
+                        </button>
+                    </div>
+                    <strong class="card-price">10 980 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <!-- CARD- 2 -->
+                <div class="card">
+                    <a href="#" class="card-image">
+                        <img src="img/card-image-2.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <h3 class="card-title">Пвх материал 2й сорт</h3>
+                        <button class="like">
+                            <img src="img/like.svg" alt="like">
+                        </button>
+                    </div>
+                    <strong class="card-price">170 ₽</strong>
+                    <p class="card-text">Казань, р-н Вахитовский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <!-- CARD- 3 -->
+                <div class="card">
+                    <a href="#" class="card-image">
+                        <img src="img/card-image-3.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <h3 class="card-title">Двухсторонняя ветровка</h3>
+                        <button class="like">
+                            <img src="img/like.svg" alt="like">
+                        </button>
+                    </div>
+                    <strong class="card-price">2 110 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <!-- CARD- 4 -->
+                <div class="card">
+                    <a href="#" class="card-image">
+                        <img src="img/card-image-4.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <h3 class="card-title">Пеленальная доска на комод</h3>
+                        <button class="like">
+                            <img src="img/like.svg" alt="like">
+                        </button>
+                    </div>
+                    <strong class="card-price">200 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <!-- CARD- 5 -->
+                <div class="card">
+                    <a href="#" class="card-image">
+                        <img src="img/card-image-5.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <h3 class="card-title">Участок 8 сот. (ИЖС)</h3>
+                        <button class="like">
+                            <img src="img/like.svg" alt="like">
+                        </button>
+                    </div>
+                    <strong class="card-price">101 980 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+                <!-- CARD- 6 -->
+                <div class="card">
+                    <a href="#" class="card-image">
+                        <img src="img/card-image-6.jpg" alt="photo" class="card-image">
+                    </a>
+                    <div class="card-header">
+                        <h3 class="card-title">Ford Fusion, 2007</h3>
+                        <button class="like">
+                            <img src="img/like.svg" alt="like">
+                        </button>
+                    </div>
+                    <strong class="card-price">304 000 ₽</strong>
+                    <p class="card-text">Казань, р-н Ново-Савиновский</p>
+                    <p class="card-text">10 июля 11:39</p>
+                </div>
+
+            </div>
+            <!--  КАРТЫ ТОВАРОВ ЗАКОНЧИЛИСЬ -->
+
+        </main>
+        <!-- КАРТА АСАЙДА 1 -->
+        <aside class="saidebar">
+            <h4 class="paget-title">Сервис и услуги</h4>
+            <div class="service-image">
+                <img src="img/avto.svg" alt="icon: avto" class="service-image">
+                <h5 class="service-title">Доставка</h5>
+                <p class="service-text">Проверка при получении и возможность бесплатно вернуть товар</p>
+
+            </div>
+            <!-- КАРТА АСАЙДА 2 -->
+
+            <div class="service-image">
+                <img src="img/avto-2.svg" alt="icon: avto" class="service-image">
+                <h5 class="service-title">Автотека</h5>
+                <p class="service-text">Отчёт с историей авто: пробег, владельцы, сведения о залоге, ДТП и ремонтах</p>
+
+            </div>
+            <!-- КАРТА АСАЙДА 3 -->
+
+            <div class="service-image">
+                <img src="img/love-1.svg" alt="icon: avto" class="service-image">
+                <h5 class="service-title">Онлайн-бронирование жилья</h5>
+                <p class="service-text">Посуточная аренда квартир и домов: большой выбор вариантов для поездок по России
+                </p>
+
+            </div>
+            <hr color="E5E5E5">
+            <footer class="footer">
+                <p class="footer-text">© ООО «Абито», 2011–2021</p>
+                <ul class="footer-menu">
+                    <li class="footer-menu-item">
+                        <a href="" class="footer-text">Политика конфиденциальности</a>
+                    </li>
+                    <li class="footer-menu-item">
+                        <a href="" class="footer-text">Обработка данных</a>
+                    </li>
+
+                </ul>
+                <ul class="footer-menu">
+                    <li class="footer-menu-item">
+                        <a href="" class="footer-link">Реклама на стайте</a>
+                    </li>
+                    <li class="footer-menu-item">
+                        <a href="" class="footer-link">Вакансии</a>
+                    </li>
+                    <li class="footer-menu-item">
+                        <a href="" class="footer-link">Помощь</a>
+                    </li>
+                </ul>
+            </footer>
+        </aside>
+        <!-- КАРТА АСАЙДА ЗАКОНЧИЛИСЬ -->
+
+    </div>
 </body>
 
 </html>
