--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <!-- header-->
     <header class="header container">
         <div class="navbar">
-            <a href="/index.html" class="logo"></a>
-            <img src="./img/logo.svg" alt="logo">
+            <a href="/index.html" class="logo">
+                <img src="./img/logo.svg" alt="logo"></a>
+
 
             <nav class="navbar-menu">
 
@@ -70,12 +71,12 @@
     <div class="page-content container">
         <!-- Обявления БЛОК -->
         <main class="main">
-            <h2 class="paget-title">Рекомендации для вас</h2>
+            <h2 class="page-title">Рекомендации для вас</h2>
             <!-- КАРТЫ ТОВАРОВ -->
             <div class="cards">
                 <!-- CARD- 1 -->
                 <div class="card">
-                    <a href="#" class="card-image">
+                    <a href="single.html" class="card-image">
                         <img src="img/card-image.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
@@ -90,7 +91,7 @@
                 </div>
                 <!-- CARD- 2 -->
                 <div class="card">
-                    <a href="#" class="card-image">
+                    <a href="single.html" class="card-image">
                         <img src="img/card-image-2.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
@@ -105,7 +106,7 @@
                 </div>
                 <!-- CARD- 3 -->
                 <div class="card">
-                    <a href="#" class="card-image">
+                    <a href="single.html" class="card-image">
                         <img src="img/card-image-3.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
@@ -120,7 +121,7 @@
                 </div>
                 <!-- CARD- 4 -->
                 <div class="card">
-                    <a href="#" class="card-image">
+                    <a href="single.html" class="card-image">
                         <img src="img/card-image-4.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
@@ -135,7 +136,7 @@
                 </div>
                 <!-- CARD- 5 -->
                 <div class="card">
-                    <a href="#" class="card-image">
+                    <a href="single.html" class="card-image">
                         <img src="img/card-image-5.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
@@ -150,7 +151,7 @@
                 </div>
                 <!-- CARD- 6 -->
                 <div class="card">
-                    <a href="#" class="card-image">
+                    <a href="single.html" class="card-image">
                         <img src="img/card-image-6.jpg" alt="photo" class="card-image">
                     </a>
                     <div class="card-header">
@@ -170,7 +171,7 @@
         </main>
         <!-- КАРТА АСАЙДА 1 -->
         <aside class="saidebar">
-            <h4 class="paget-title">Сервис и услуги</h4>
+            <h4 class="page-title">Сервис и услуги</h4>
             <div class="service-image">
                 <img src="img/avto.svg" alt="icon: avto" class="service-image">
                 <h5 class="service-title">Доставка</h5>
